--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body dir="rtl">
   <app-root></app-root>
 </body>
 
